# OpenPLC

./: .gitignore  .gitmodules  README.md
editor/: CMakeLists.txt  readme.md
editor/resources/: dark_theme.qss  light_theme.qss  tizi.qrc
editor/src/: main.cpp
editor/src/app/: BlockPropertiesDialog.cpp  BlockPropertiesDialog.h  MainWindow.cpp  MainWindow.h  ProjectManager.cpp  ProjectManager.h
editor/src/comm/: DownloadDialog.cpp  DownloadDialog.h  IPlcTransport.h  PlcProtocol.cpp  PlcProtocol.h  SerialTransport.cpp  SerialTransport.h  TcpTransport.cpp  TcpTransport.h
editor/src/conf/: library.xml
editor/src/core/compiler/: CodeGenerator.cpp  CodeGenerator.h  StGenerator.cpp  StGenerator.h
editor/src/core/models/: CircuitGraph.h  LadderElement.h  PouModel.cpp  PouModel.h  ProjectModel.cpp  ProjectModel.h  Rung.h  VariableDecl.h
editor/src/editor/items/: BaseItem.h  CoilItem.cpp  CoilItem.h  ContactItem.cpp  ContactItem.h  FunctionBlockItem.cpp  FunctionBlockItem.h  RailItem.cpp  VarBoxItem.h  WireItem.cpp  WireItem.h
editor/src/editor/scene/: LadderScene.cpp  LadderScene.h  LadderView.cpp  LadderView.h  PlcOpenViewer.cpp  PlcOpenViewer.h
editor/src/sim/: smartsim.cpp
editor/src/utils/: StHighlighter.h  TreeBranchStyle.h  UndoStack.cpp  UndoStack.h  XmlSerializer.cpp
editor/tests/drivers/linux/: driver.json
editor/tests/drivers/linux/templates/: plc_main.c  plc_wasm_main.c
editor/tests/drivers/lpc824/: driver.json
editor/tests/drivers/lpc824/linker/: lpc824_user.ld
editor/tests/drivers/lpc824/templates/: user_logic_wrapper.c
editor/tests/drivers/macos/: driver.json
editor/tests/first_steps/: plc.tizi  traffic.tizi
editor/todo/: architectural-review.md
editor/tools/: pack_driver.py
editor/tools/matiec_mac/: iec2iec
editor/tools/wasm/wasi-sdk/: VERSION  bin  lib  share
runtime/: firmware.elf  makefile  readme.md  shared_interface.h
runtime/app/: main.c  runtime.c  xcode_runner.c
runtime/bsp/include/: lpc824.ld
runtime/user_logic/: Makefile  user_logic.c
todo/: architectural-review.md  ask.md  check.md  ref.md  refer_editor.md  todo.md
tools/: plc_main.c  test.st  traffic.st
tools/matiec_mac/: iec2c
